--- a/video6/kubernetes/apps/elixir-app/ingress.yaml
+++ b/video6/kubernetes/apps/elixir-app/ingress.yaml
@@ -2,16 +2,19 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: golang-app
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
+  ingressClassName: nginx
   rules:
-  - host: "golang-app.dev"
+  - host: golang-app-dev
     http:
       paths:
       - pathType: Prefix
         path: /(.*)
         backend:
           service:
-            name: golang-app
+            name: golang-app-svc
             port:
-              number: 80
+              number: 8080
   
