--- a/video6/kubernetes/apps/elixir-app/service.yaml
+++ b/video6/kubernetes/apps/elixir-app/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: golang-app
+  name: golang-app-svc
 spec:
   selector:
-    app.kubernetes.io/name: golang-app
+    app: golang-app
   ports:
     - protocol: TCP
-      port: 80
+      port: 8080
       targetPort: 1323
